--- a/GUIRAO_RESUME_ITCD.HTML
+++ b/GUIRAO_RESUME_ITCD.HTML
@@ -31,12 +31,12 @@
                 <ul>
                     <ul>
                         <li><b>MS Office</b>: <i>Word, Excel, Powerpoint, Access</i></li>
-                        <li><b>Spreadsheets</b>: <i>WGoogle Sheets, Excel</i></li>
-                        <li><b>Presenting</b>: <i>WPublic speaking, Powerpoint</i></li>
-                        <li><b>Web</b>: <i>WHTML, CSS, JavaScript</i></li>
-                        <li><b>Programming Skills</b>: <i>WPython, SQL, C#, Java, HTML</i></li>
-                        <li><b>Social Media</b>: <i>WFacebook, Instagram, LinkedIn, Customer Interaction</i></li>
-                        <li><b>Planning</b>: <i>WBrainstorming, Decision-making, Requirements-gathering, Analysis</i></li>
+                        <li><b>Spreadsheets</b>: <i>Google Sheets, Excel</i></li>
+                        <li><b>Presenting</b>: <i>Public speaking, Powerpoint</i></li>
+                        <li><b>Web</b>: <i>HTML, CSS, JavaScript</i></li>
+                        <li><b>Programming Skills</b>: <i>Python, SQL, C#, Java, HTML</i></li>
+                        <li><b>Social Media</b>: <i>Facebook, Instagram, LinkedIn, Customer Interaction</i></li>
+                        <li><b>Planning</b>: <i>Brainstorming, Decision-making, Requirements-gathering, Analysis</i></li>
                         <li><b>Project Management Skills</b>: <i>Prioritization, Delegation, Task management, Scheduling</i></li>
             </ul></ul></ul><br><br>
         <li class="category">Work Experiences</li><br>
