--- a/planetEarth.html
+++ b/planetEarth.html
@@ -56,7 +56,7 @@
     <h1>THE EARTH.</h1>
     
     <br>
-    <img src="../IMAGES/Earth.jpg" alt="Picture of our home planet.">
+    <img src="Earth.jpg" alt="Picture of our home planet.">
 
     <div align="justify">
     <blockquote><p>
