--- a/planetUranus.html
+++ b/planetUranus.html
@@ -56,7 +56,7 @@
     <h1>THE URANUS.</h1>
     
     <br>
-    <img src="../IMAGES/Uranus.png" alt="Picture of the planet, Uranus.">
+    <img src="Uranus.png" alt="Picture of the planet, Uranus.">
 
     <div align="justify">
     <blockquote><p>
