--- a/planetMercury.html
+++ b/planetMercury.html
@@ -56,7 +56,7 @@
     <h1>THE MERCURY.</h1>
     
     <br>
-    <img src="../IMAGES/Mercury.jpg" alt="Picture of the planet, Mercury.">
+    <img src="Mercury.jpg" alt="Picture of the planet, Mercury.">
 
     <div align="justify">
     <blockquote><p>
