--- a/GUIRAO_ImageMapping_ITCD.html
+++ b/GUIRAO_ImageMapping_ITCD.html
@@ -53,7 +53,7 @@
 
     <br>
     <div align="center">
-        <img src="solar_system.jpg" alt="Shows the planets in our solar system." usemap="#solarSystem">
+        <img src="../solar_system.jpg" alt="Shows the planets in our solar system." usemap="#solarSystem">
         <map name="solarSystem">
             <area shape="rect" coords="178, 373, 222, 415" href="planetMercury.html" alt="Links to the Mercury planet page." onMouseOver="writeText ('Mercury consists of approximately 70% metallic and 30% silicate material.')" onMouseOut="dissolveText('')" target="mercuryPage">
 
