--- a/HTML/gallery.html
+++ b/HTML/gallery.html
@@ -19,14 +19,14 @@
     <div class="navigation">
         <div id="name">J. Darrell<br>Guirao</div>
         <div><a href="../index.html">Home</a></div>
-        <div><a href="/HTML/biography.html">Biography</a></div>
-        <div><a href="/HTML/skillsHobbiesInterests.html">My Interests</a></div>
-        <div><a href="/HTML/placeholder.html">My Future</a></div>
-        <div><a href="/HTML/placeholder.html">My Bucket List</a></div>
-        <div><a href="/HTML/resume.html">Resumé</a></div>
-        <div><a href="/HTML/placeholder.html">Places I Want To Visit</a></div>
-        <div><a href="/HTML/placeholder.html">YouTube</a></div>
-        <div><a href="/HTML/placeholder.html">Music</a></div>
+        <div><a href="biography.html">Biography</a></div>
+        <div><a href="skillsHobbiesInterests.html">My Interests</a></div>
+        <div><a href="placeholder.html">My Future</a></div>
+        <div><a href="placeholder.html">My Bucket List</a></div>
+        <div><a href="resume.html">Resumé</a></div>
+        <div><a href="placeholder.html">Places I Want To Visit</a></div>
+        <div><a href="placeholder.html">YouTube</a></div>
+        <div><a href="placeholder.html">Music</a></div>
     </div>
 
     <div class="heading">
