--- a/HTML/skillsHobbiesInterests.html
+++ b/HTML/skillsHobbiesInterests.html
@@ -20,14 +20,14 @@
     <div class="navigation">
         <div id="name">J. Darrell<br>Guirao</div>
         <div><a href="../index.html">Home</a></div>
-        <div><a href="/HTML/biography.html">Biography</a></div>
-        <div><a href="/HTML/placeholder.html">My Future</a></div>
-        <div><a href="/HTML/placeholder.html">My Bucket List</a></div>
-        <div><a href="/HTML/placeholder.html">Resumé</a></div>
-        <div><a href="/HTML/placeholder.html">Places I Want To Visit</a></div>
-        <div><a href="/HTML/placeholder.html">Gallery</a></div>
-        <div><a href="/HTML/placeholder.html">YouTube</a></div>
-        <div><a href="/HTML/placeholder.html">Music</a></div>
+        <div><a href="biography.html">Biography</a></div>
+        <div><a href="placeholder.html">My Future</a></div>
+        <div><a href="placeholder.html">My Bucket List</a></div>
+        <div><a href="placeholder.html">Resumé</a></div>
+        <div><a href="placeholder.html">Places I Want To Visit</a></div>
+        <div><a href="placeholder.html">Gallery</a></div>
+        <div><a href="placeholder.html">YouTube</a></div>
+        <div><a href="placeholder.html">Music</a></div>
     </div>
 
     <div class="heading">
