--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <div><a href="HTML/resume.html">Resumé</a></div>
         <div><a href="HTML/placeholder.html">Places I Want To Visit</a></div>
         <div><a href="HTML/gallery.html">Gallery</a></div>
-        <div><a href="HTML/placeholder.html">YouTube</a></div>
-        <div><a href="HTML/placeholder.html">Music</a></div>
+        <div><a href="HTML/beats.html">Music</a></div>
+        <div><a href="HTML/movies.html">Movies</a></div>
     </div>
 
     <div class="content">
@@ -37,7 +37,7 @@
             <h3>—A.J. Pierzynski</h3>
 
             <div class="explore-button">
-                <a href="HTML/biography.html" title="Know more about my life.">Explore More >>></a>
+                <a href="/HTML/biography.html" title="Know more about my life.">Explore More >>></a>
             </div>
         </div>
     </div>
