--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <div id="name">J. Darrell<br>Guirao</div>
         <div><a href="HTML/biography.html">Biography</a></div>
         <div><a href="HTML/skillsHobbiesInterests.html">My Interests</a></div>
-        <div><a href="HTML/placeholder.html">My Future</a></div>
-        <div><a href="HTML/placeholder.html">My Bucket List</a></div>
+        <div><a href="HTML/destiny.html">My Future</a></div>
+        <div><a href="HTML/goals.html">My Bucket List</a></div>
         <div><a href="HTML/resume.html">Resumé</a></div>
-        <div><a href="HTML/placeholder.html">Places I Want To Visit</a></div>
+        <div><a href="HTML/odyssey.html">Odyssey</a></div>
         <div><a href="HTML/gallery.html">Gallery</a></div>
         <div><a href="HTML/beats.html">Music</a></div>
         <div><a href="HTML/movies.html">Movies</a></div>
