--- a/HTML/beats.html
+++ b/HTML/beats.html
@@ -19,11 +19,12 @@
     <div class="navigation">
         <div id="name">J. Darrell<br>Guirao</div>
         <div><a href="../index.html">Home</a></div>
+        <div><a href="biography.html">Biography</a></div>
         <div><a href="skillsHobbiesInterests.html">My Interests</a></div>
-        <div><a href="placeholder.html">My Future</a></div>
-        <div><a href="placeholder.html">My Bucket List</a></div>
+        <div><a href="destiny.html">My Future</a></div>
+        <div><a href="goals.html">My Bucket List</a></div>
         <div><a href="resume.html">Resumé</a></div>
-        <div><a href="placeholder.html">Places I Want To Visit</a></div>
+        <div><a href="odyssey.html">Odyssey</a></div>
         <div><a href="gallery.html">Gallery</a></div>
         <div><a href="movies.html">Movies</a></div>
     </div>
@@ -137,7 +138,7 @@
     </section>
 
     <div class="explore-button">
-        <a href="movies.html" title="Know more about my skills, hobbies, and interests.">Explore More >>></a>
+        <a href="movies.html" title="Read about my favorite movies.">Explore More >>></a>
     </div>
 </body>
 </html>
