--- a/HTML/gallery.html
+++ b/HTML/gallery.html
@@ -21,12 +21,12 @@
         <div><a href="../index.html">Home</a></div>
         <div><a href="biography.html">Biography</a></div>
         <div><a href="skillsHobbiesInterests.html">My Interests</a></div>
-        <div><a href="placeholder.html">My Future</a></div>
-        <div><a href="placeholder.html">My Bucket List</a></div>
+        <div><a href="destiny.html">My Future</a></div>
+        <div><a href="goals.html">My Bucket List</a></div>
         <div><a href="resume.html">Resumé</a></div>
-        <div><a href="placeholder.html">Places I Want To Visit</a></div>
-        <div><a href="placeholder.html">YouTube</a></div>
-        <div><a href="placeholder.html">Music</a></div>
+        <div><a href="odyssey.html">Odyssey</a></div>
+        <div><a href="beats.html">Music</a></div>
+        <div><a href="movies.html">Movies</a></div>
     </div>
 
     <div class="heading">
@@ -92,6 +92,24 @@
             <a href="../MEDIA/IMAGES/mangaAnime.jpg" target="newWindow"><img src="../MEDIA/IMAGES/mangaAnime.jpg"></a>
             <a href="../MEDIA/IMAGES/timeManagement.jpg" target="newWindow"><img src="../MEDIA/IMAGES/timeManagement.jpg"></a>
             <a href="../MEDIA/IMAGES/underPressure.jpg" target="newWindow"><img src="../MEDIA/IMAGES/underPressure.jpg"></a>
+            <a href="../MEDIA/IMAGES/underPressure.jpg" target="newWindow"><img src="../MEDIA/IMAGES/benAndBen.jpg"></a>
+            <a href="../MEDIA/IMAGES/underPressure.jpg" target="newWindow"><img src="../MEDIA/IMAGES/Yoasobi.jpg"></a>
+            <a href="../MEDIA/IMAGES/underPressure.jpg" target="newWindow"><img src="../MEDIA/IMAGES/rexOrangeCounty.jpg"></a>
+            <a href="../MEDIA/IMAGES/underPressure.jpg" target="newWindow"><img src="../MEDIA/IMAGES/ODYSSESYS/akihabara.jpg"></a>
+            <a href="../MEDIA/IMAGES/underPressure.jpg" target="newWindow"><img src="../MEDIA/IMAGES/ODYSSESYS/bananaReef.jpg"></a>
+            <a href="../MEDIA/IMAGES/underPressure.jpg" target="newWindow"><img src="../MEDIA/IMAGES/ODYSSESYS/boracay.jpg"></a>
+            <a href="../MEDIA/IMAGES/underPressure.jpg" target="newWindow"><img src="../MEDIA/IMAGES/ODYSSESYS/cyrstalCove.jpg"></a>
+            <a href="../MEDIA/IMAGES/underPressure.jpg" target="newWindow"><img src="../MEDIA/IMAGES/ODYSSESYS/disneyLand.jpg"></a>
+            <a href="../MEDIA/IMAGES/underPressure.jpg" target="newWindow"><img src="../MEDIA/IMAGES/ODYSSESYS/gotaCanal.jpg"></a>
+            <a href="../MEDIA/IMAGES/underPressure.jpg" target="newWindow"><img src="../MEDIA/IMAGES/ODYSSESYS/himejiCastle.jpg"></a>
+            <a href="../MEDIA/IMAGES/underPressure.jpg" target="newWindow"><img src="../MEDIA/IMAGES/ODYSSESYS/islandHopping.jpg"></a>
+            <a href="../MEDIA/IMAGES/underPressure.jpg" target="newWindow"><img src="../MEDIA/IMAGES/ODYSSESYS/kurumbaBeach.jpg"></a>
+            <a href="../MEDIA/IMAGES/underPressure.jpg" target="newWindow"><img src="../MEDIA/IMAGES/ODYSSESYS/maldiveVictory.jpg"></a>
+            <a href="../MEDIA/IMAGES/underPressure.jpg" target="newWindow"><img src="../MEDIA/IMAGES/ODYSSESYS/mtFuji.jpg"></a>
+            <a href="../MEDIA/IMAGES/underPressure.jpg" target="newWindow"><img src="../MEDIA/IMAGES/ODYSSESYS/northernLights.jpg"></a>
+            <a href="../MEDIA/IMAGES/underPressure.jpg" target="newWindow"><img src="../MEDIA/IMAGES/ODYSSESYS/starFerry.jpg"></a>
+            <a href="../MEDIA/IMAGES/underPressure.jpg" target="newWindow"><img src="../MEDIA/IMAGES/ODYSSESYS/vasaMuseum.jpg"></a>
+            <a href="../MEDIA/IMAGES/underPressure.jpg" target="newWindow"><img src="../MEDIA/IMAGES/ODYSSESYS/victoriaPeak.jpg"></a>
 
             <div class="back-to-top">
                 <a href="#">Go to Top</a>
@@ -100,7 +118,7 @@
     </div>
 
     <div class="explore-button">
-        <a href="placeholder.html" title="Check out my bucket list.">Explore More >>></a>
+        <a href="beats.html" title="Read about my favorite music.">Explore More >>></a>
     </div>
 </body>
 </html>
