--- a/HTML/resume.html
+++ b/HTML/resume.html
@@ -21,12 +21,12 @@
         <div><a href="../index.html">Home</a></div>
         <div><a href="biography.html">Biography</a></div>
         <div><a href="skillsHobbiesInterests.html">My Interests</a></div>
-        <div><a href="placeholder.html">My Future</a></div>
-        <div><a href="placeholder.html">My Bucket List</a></div>
-        <div><a href="placeholder.html">Places I Want To Visit</a></div>
+        <div><a href="destiny.html">My Future</a></div>
+        <div><a href="goals.html">My Bucket List</a></div>
+        <div><a href="odyssey.html">Odyssey</a></div>
         <div><a href="gallery.html">Gallery</a></div>
-        <div><a href="placeholder.html">YouTube</a></div>
-        <div><a href="placeholder.html">Music</a></div>
+        <div><a href="beats.html">Music</a></div>
+        <div><a href="movies.html">Movies</a></div>
     </div>
 
     <div class="heading">
@@ -60,7 +60,7 @@
         <div class="text">
             <h1>JOHN DARRELL GUIRAO</h1>
             <h2>Web Administrator</h2>
-            <h3>Email Address: <a href="mailto:guirao.johndarrell@ue.edu.ph">guirao.johndarrell@ue.edu.ph</a></h3>
+            <h3>Email Address: guirao.johndarrell@ue.edu.ph</h3>
             <h3>Contact Number: 09560815109</h3>
         </div>
         
@@ -181,7 +181,7 @@
         <a href="#">Go to Top</a>
     </div>
     <div class="explore-button">
-        <a href="gallery.html" title="Scroll through the photo gallery.">Explore More >>></a>
+        <a href="odyssey.html" title="Read about the places I want to visit.">Explore More >>></a>
     </div>
 </body>
 </html>
