--- a/HTML/biography.html
+++ b/HTML/biography.html
@@ -20,13 +20,13 @@
         <div id="name">J. Darrell<br>Guirao</div>
         <div><a href="../index.html">Home</a></div>
         <div><a href="skillsHobbiesInterests.html">My Interests</a></div>
-        <div><a href="placeholder.html">My Future</a></div>
-        <div><a href="placeholder.html">My Bucket List</a></div>
+        <div><a href="destiny.html">My Future</a></div>
+        <div><a href="goals.html">My Bucket List</a></div>
         <div><a href="resume.html">Resumé</a></div>
-        <div><a href="placeholder.html">Places I Want To Visit</a></div>
+        <div><a href="odyssey.html">Odyssey</a></div>
         <div><a href="gallery.html">Gallery</a></div>
-        <div><a href="placeholder.html">YouTube</a></div>
-        <div><a href="placeholder.html">Music</a></div>
+        <div><a href="beats.html">Music</a></div>
+        <div><a href="movies.html">Movies</a></div>
     </div>
 
     <div class="heading">
