--- a/HTML/movies.html
+++ b/HTML/movies.html
@@ -19,11 +19,12 @@
     <div class="navigation">
         <div id="name">J. Darrell<br>Guirao</div>
         <div><a href="../index.html">Home</a></div>
+        <div><a href="biography.html">Biography</a></div>
         <div><a href="skillsHobbiesInterests.html">My Interests</a></div>
-        <div><a href="placeholder.html">My Future</a></div>
-        <div><a href="placeholder.html">My Bucket List</a></div>
+        <div><a href="destiny.html">My Future</a></div>
+        <div><a href="goals.html">My Bucket List</a></div>
         <div><a href="resume.html">Resumé</a></div>
-        <div><a href="placeholder.html">Places I Want To Visit</a></div>
+        <div><a href="odyssey.html">Odyssey</a></div>
         <div><a href="gallery.html">Gallery</a></div>
         <div><a href="beats.html">Music</a></div>
     </div>
@@ -116,7 +117,7 @@
     </div>
 
     <div class="explore-button">
-        <a href="placeholder.html" title="Know more about my skills, hobbies, and interests.">Explore More >>></a>
+        <a href="../index.html" title="Go back to my landing page.">Home >>></a>
     </div>
 </body>
 </html>
