--- a/HTML/skillsHobbiesInterests.html
+++ b/HTML/skillsHobbiesInterests.html
@@ -21,13 +21,13 @@
         <div id="name">J. Darrell<br>Guirao</div>
         <div><a href="../index.html">Home</a></div>
         <div><a href="biography.html">Biography</a></div>
-        <div><a href="placeholder.html">My Future</a></div>
-        <div><a href="placeholder.html">My Bucket List</a></div>
-        <div><a href="placeholder.html">Resumé</a></div>
-        <div><a href="placeholder.html">Places I Want To Visit</a></div>
-        <div><a href="placeholder.html">Gallery</a></div>
-        <div><a href="placeholder.html">YouTube</a></div>
-        <div><a href="placeholder.html">Music</a></div>
+        <div><a href="destiny.html">My Future</a></div>
+        <div><a href="goals.html">My Bucket List</a></div>
+        <div><a href="resume.html">Resumé</a></div>
+        <div><a href="odyssey.html">Odyssey</a></div>
+        <div><a href="gallery.html">Gallery</a></div>
+        <div><a href="beats.html">Music</a></div>
+        <div><a href="movies.html">Movies</a></div>
     </div>
 
     <div class="heading">
@@ -75,6 +75,10 @@
     </div>
 
     <div id="hobbies" class="content">
+        <div class="image">
+            <a href="../MEDIA/IMAGES/underPressure.jpg" target="newWindow"><img src="../MEDIA/IMAGES/underPressure.jpg"></a>
+        </div>
+        
         <div class="text">
             <h2>My Hobbies</h2>
             <p>
@@ -86,9 +90,6 @@
             <p>
                 Not until I reached my College years where I experienced true hardship in life. I was <strong>forced to work on a full-time job while studying</strong>. This is due to the reason that we lack financially that I need to do something to continue my academic life. Aside from the hobbies that I've mentioned earlier, the <em>only hobby that I could do now is to work</em>. <strong><em>I've accepted the harsh reality of life and instead loathe it, I've embraced it</em></strong>. It took me a long time to adjust. But, as long as <em>we show willingness to learn and adapt</em>, there is <b>no such impossible feat</b>. We will learn how to love what we hate. Such is the human mindset, how easily it can be <b><i><u>tricked foolishly.</u></i></b>
             </p>
-        </div>
-        <div class="image">
-            <a href="../MEDIA/IMAGES/underPressure.jpg" target="newWindow"><img src="../MEDIA/IMAGES/underPressure.jpg"></a>
         </div>
         
         <div class="back-to-top">
@@ -118,7 +119,7 @@
     </div>
 
     <div class="explore-button">
-        <a href="resume.html" title="Check out my credentials in my Resumé page.">Explore More >>></a>
+        <a href="destiny.html" title="Read about my future plans.">Explore More >>></a>
     </div>
 
 </body>
