--- a/HTML/gallery.html
+++ b/HTML/gallery.html
@@ -67,7 +67,7 @@
             <h2>High School Photos</h2>
             <a href="../MEDIA/IMAGES/HS1.jpg" target="newWindow"><img src="../MEDIA/IMAGES/HS1.jpg"></a>
             <a href="../MEDIA/IMAGES/HS2.jpg" target="newWindow"><img src="../MEDIA/IMAGES/HS2.jpg"></a>
-            <a href="../MEDIA/IMAGES/HS3.jpg" target="newWindow"><img src="../MEDIA/IMAGES/HS3.jpg"></a>
+            <a href="../MEDIA/IMAGES/hs3.jpg" target="newWindow"><img src="../MEDIA/IMAGES/hs3.jpg"></a>
 
             <div class="back-to-top">
                 <a href="#">Go to Top</a>
