--- a/GROUP-3_Cryptocurrency/HTML/dogeCoinTypes.html
+++ b/GROUP-3_Cryptocurrency/HTML/dogeCoinTypes.html
@@ -14,7 +14,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Raleway:wght@300&family=Yrsa&display=swap" rel="stylesheet">
 
     <link rel="icon" type="image/x-icon" href="../IMAGES/ICONS/tabIcon.png">
-    <link rel="stylesheet" href="../CSS/dogecoinTypesStyle.css" type="text/css">
+    <link rel="stylesheet" href="../CSS/dogeCoinTypesStyle.css" type="text/css">
 </head>
 <body>
    <div class="navigation">
