--- a/GROUP-3_Cryptocurrency/HTML/aboutTheAuthors.html
+++ b/GROUP-3_Cryptocurrency/HTML/aboutTheAuthors.html
@@ -82,7 +82,7 @@
     <div class="container-author-two">
         <div class="wrapper">
             <div id="Div1">
-                <img src="../IMAGES/PROFILES/anonuevo.jpg" />
+                <img src="../IMAGES/PROFILES/anonuevo.png" />
                 <div class="quote-container">
                     <p class="quote"><q>Happines begins with the decision to no longer feel sad</q> - <span>steven aitchison</span></p>
                 </div>
