--- a/GROUP-3_Cryptocurrency/HTML/investmentHome.html
+++ b/GROUP-3_Cryptocurrency/HTML/investmentHome.html
@@ -48,23 +48,23 @@
         
 
         <div class="col1">
-            <a href="investmentpros.html"><img class="topics-img" src="../images/pros.svg" alt="pros" title="pros">
+            <a href="investmentpros.html"><img class="topics-img" src="../IMAGES/pros.svg" alt="pros" title="pros">
             <figcaption>Pros</figcaption></a>
         </div>
 
         <div class="col2">
-            <a href="investmentcons.html"><img class="topics-img" src="../images/cons.svg" alt="cons" title="cons">
+            <a href="investmentcons.html"><img class="topics-img" src="../IMAGES/cons.svg" alt="cons" title="cons">
             <figcaption>Cons</figcaption></a>
         </div>
 		
 		<div class="col3">
-            <a href="investmentbest2buy.html"><img class="topics-img" src="../images/best2buy.svg" alt="BesttoBuy" title="BesttoBuy">
+            <a href="investmentbest2buy.html"><img class="topics-img" src="../IMAGES/best2buy.svg" alt="BesttoBuy" title="BesttoBuy">
             <figcaption>Best to Buy</figcaption>
             <figcaption>Cryptocurrency</figcaption></a>
         </div>
 		
 		<div class="col4">
-            <a href="tips.html"><img class="topics-img" src="../images/investmentVector.svg" alt="Investment" title="Investment">
+            <a href="tips.html"><img class="topics-img" src="../IMAGES/investmentVector.svg" alt="Investment" title="Investment">
             <figcaption>Back to</figcaption>
             <figcaption>Investment</figcaption></a>
         </div>
