--- a/GROUP-3_Cryptocurrency/HTML/investmentbest2buy.html
+++ b/GROUP-3_Cryptocurrency/HTML/investmentbest2buy.html
@@ -48,7 +48,7 @@
     <div class="all-in-one">
         <div class="container-topic">
             <h2>Best Cryptocurrency to Buy Right Now</h2>
-            <img class="banner-img" src="../images/investment.jpeg" />
+            <img class="banner-img" src="../IMAGES/investment.jpeg" />
 
             <p class="txt-content">
                 <strong>Bitcoin</strong> Bitcoin, the world's leading cryptocurrency, has had a tough month like any
@@ -84,7 +84,7 @@
                 the market in 2022, and its low transaction fees should continue to threaten Ethereum users until the
                 merge is complete.
             </p>
-            <img class="banner-img" src="../images/solanaBestCryptoInvestment.svg" />
+            <img class="banner-img" src="../IMAGES/solanaBestCryptoInvestment.svg" />
             <p class="txt-content">
                 <strong>Terra (LUNA)</strong> Another cryptocurrency that is currently the best choice to buy is LUNA,
                 the native token of the Terra blockchain protocol. The value of LUNA is not known as a type of DeFi or
