--- a/GROUP-3_Cryptocurrency/HTML/investmentpros.html
+++ b/GROUP-3_Cryptocurrency/HTML/investmentpros.html
@@ -48,7 +48,7 @@
     <div class="all-in-one">
         <div class="container-topic">
             <h2>Pros in Investment</h2>
-            <img class="banner-img" src="../images/prosInvestment.png" />
+            <img class="banner-img" src="../IMAGES/prosInvestment.png" />
 
             <p class="txt-content">
                 <strong>Personal Information Privacy</strong> You must show the PIN code to the seller to make the
