--- a/GROUP-3_Cryptocurrency/HTML/jargon.html
+++ b/GROUP-3_Cryptocurrency/HTML/jargon.html
@@ -48,7 +48,7 @@
     <div class="all-in-one">
         <div class="container-topic">
             <h2>Jargons</h2>
-            <img class="banner-img" src="../images/jargons.png" />
+            <img class="banner-img" src="../IMAGES/jargons.png" />
 
             <p class="txt-content">
                 <strong>Accredited Investor </strong> An accredited investor is an individual or a business entity that
