--- a/GROUP-3_Cryptocurrency/HTML/aboutTheAuthors.html
+++ b/GROUP-3_Cryptocurrency/HTML/aboutTheAuthors.html
@@ -33,7 +33,7 @@
             </div>
 
         </div>
-        <div><a href="darkside.html">Dark Side</a></div>
+        <div><a href="darkSide.html">Dark Side</a></div>
         <div><a href="tips.html">Tips</a></div>
         <div><a href="aboutTheAuthors.html">About the Authors</a></div>
         <div><a href="gallery.html">Gallery</a></div>
