--- a/GROUP-3_Cryptocurrency/HTML/anchor/spiderCryptoGames.html
+++ b/GROUP-3_Cryptocurrency/HTML/anchor/spiderCryptoGames.html
@@ -78,7 +78,7 @@
     <div class="side-nav-2">
         <h5>Crypto on the NFT Market & Arts</h5>
         <p class="side-nav-txt CGames"><a href="../nftTopGames.html">Top 5 Cryptocurrency on the NFT Market</a></p>
-        <p class="side-nav-txt NFTArts"><a href="../NftTop5Arts.html">Top 6 NFT Arts</a></p>
+        <p class="side-nav-txt NFTArts"><a href="../nftTop5Arts.html">Top 6 NFT Arts</a></p>
     </div>
     
 </div>
